# toylang

./: .gitignore  TODO  ipt.ll
playground/src/: main.rs
toylang/: Cargo.toml  __TST.txt  build.rs
toylang/.cargo/: config.toml
toylang/examples/: gen  gen.tl  ipt  ipt.out  ipt.txt  refs  refs.tl  vecs  vecs.tl
toylang/src/: binding.rs  core.rs  ipt copy.txt  ipt.txt  llvm.rs  main.rs  parsing.rs  types.rs  wow.txt
toylang/src/core/: arena.rs  collections.rs  lazy.rs  many.rs  monad.rs  ops.rs  prehashed.rs  utils.rs
toylang/src/parsing/: ast.rs  grammar.pest  grammar.rs  lexer.rs  parseable.rs  parser.rs  token.rs
toylang/std/: io.tl  malloc.tl  vec.tl
toylang_derive/: Cargo.toml
toylang_derive/src/: lib.rs
