[package]
name = "toylang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0-prefer-dynamic"] }
toylang_derive = { path = "../toylang_derive" }
concat-idents = "1.1.5"
clap = { version = "4.4.6", features = ["derive"] }
termcolor = "1.3.0"
hashlink = "0.8.4"

# speed up builds (?)
[profile.dev]
opt-level = 1
debug = true
incremental = true
